@@ -8,6 +8,8 @@ class Net::SSLeay::X509_STORE_CTX {
   # Instance Methods
   native method set_error : void ($s : int);
   
+  native method get_error : int ();
+  
   native method DESTROY : void ();
   
 }
