@@ -1,6 +1,7 @@
 0.012 2024-11-13
   [New Features]
     * Add Net::SSLeay::X509_STORE_CTX#set_error method.
+    * Add Net::SSLeay::X509_STORE_CTX#get_error method.
     
 0.011 2024-11-12
   [New Features]
